Fixing text overflow in code examples.

--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,16 @@ ul {
     border: 3px solid #2c3e50;
     border-radius: 3px;
     padding: 10px;
+
+}
+
+pre {
+    width: 100%;
+}
+
+code {
+    overflow-x: hidden;
+    display: block;
 }
 
 blockquote {
